index and show pages up for historicalmoments and events

--- a/Historical-Moments/app/views/events/index.html.erb
+++ b/Historical-Moments/app/views/events/index.html.erb
@@ -1,1 +1,7 @@
-<h1> <%= @events..name %>'s Events</h1>
+<h1> <%= @events.second.historical_moment.name %>'s Events</h1>
+
+<h3>
+<% @events.each do |event| %>
+<%= link_to event.name, event_path(event) %> <br>
+<% end %>
+</h3>
