fixed pics and added layout navigation buttons

--- a/Historical-Moments/app/views/layouts/application.html.erb
+++ b/Historical-Moments/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+
+  <h3> <%= link_to "Hist. Moments", historical_moments_path %>  &nbsp <%= link_to "Hist. Events", events_path %>
+  &nbsp <%= link_to "Hist. Actors", events_path %> &nbsp <%= link_to "Hist. Docs", events_path %></h3>
     <%= yield %>
   </body>
 </html>
