added edit, delete, create to docs views

--- a/Historical-Moments/app/views/documents/edit.html.erb
+++ b/Historical-Moments/app/views/documents/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a New Document</h1>
+<h1>Edit Document</h1>
 <%= form_for(@document) do |f| %> 
 <%= f.label :title %>
 <%= f.text_field :title %> <br>
@@ -11,6 +11,3 @@
 <%= f.collection_select :historical_moment_id, HistoricalMoment.all, :id, :name %>
 <%= f.submit %>
 <% end %> 
-
-
-
