--- a/Historical-Moments/app/views/documents/show.html.erb
+++ b/Historical-Moments/app/views/documents/show.html.erb
@@ -2,4 +2,6 @@
 link: <%= @document.text %> <br>
 <%= @document.creation_date %> <br>
 <%= @document.author %> <br>
+<%= link_to "Edit", edit_document_path(@document)%>
+<%= link_to "Delete", document_path(@document), method: :delete %>
 
