--- a/Historical-Moments/app/views/historical_moments/show.html.erb
+++ b/Historical-Moments/app/views/historical_moments/show.html.erb
@@ -1,8 +1,14 @@
 <h1> <%= @historicalMoment.name %> </h1>
 
 
-<h3>
+<h3> Events: <br>
 <% @historicalMoment.events.each do |event| %>
-Event: <%= link_to event.name, event_path(event) %> <br>
+<%= link_to event.name, event_path(event) %> <br>
 <% end %>
 </h3>
+
+
+<%= form_tag historical_moment_path(@historicalMoment), method: :delete do %>
+ <%= submit_tag "Delete Historical Moment" %>
+<% end %>
+
