--- a/Historical-Moments/app/views/events/show.html.erb
+++ b/Historical-Moments/app/views/events/show.html.erb
@@ -3,7 +3,11 @@
 <br>
 <h3>What happend here? <br><br> <%= @event.description %> </h3>
 
-<img src= <%=@event.img_url %> alt="Italian Trulli">
+<img src= <%=@event.img_url %> alt="">
+<br><br>
+<%= form_tag event_path(@event), method: :delete do %>
+ <%= submit_tag "Delete Event" %>
+<% end %>
  
 
 
