--- a/Historical-Moments/app/views/events/show.html.erb
+++ b/Historical-Moments/app/views/events/show.html.erb
@@ -5,9 +5,16 @@
 
 <img src= <%=@event.img_url %> alt="">
 <br><br>
-<%= form_tag event_path(@event), method: :delete do %>
- <%= submit_tag "Delete Event" %>
+<%= form_tag edit_event_path, method: :get do %>
+<%= submit_tag "Update Event" %>
 <% end %>
+
+<%= form_tag event_path(@event), method: :delete do %>
+ <%= submit_tag "Delete Event", data: { confirm: 'Are you sure?' } %>
+<% end %>
+
+
+
  
 
 
