added additional seed data and links between pages

--- a/Historical-Moments/app/views/actors/show.html.erb
+++ b/Historical-Moments/app/views/actors/show.html.erb
@@ -1,11 +1,17 @@
 <h1> <%= @actor.name %> </h1>
-Date of Birth: <%= @actor.birth_date %> <br>
+<h3>Date of Birth: <%= @actor.birth_date %> <br>
 Date of Death: <%= @actor.death_date %> <br>
 Bio: <%= @actor.bio %> <br>
 Title: <%= @actor.title %> <br>
 <% @actor.events.each do |event| %> 
     Participated In: <%= link_to event.name, event_path(event) %> <br>
-    <% end %><br>
+    <% end %><br> 
+    <%= link_to "Edit", edit_actor_path(@actor)%> ||
+<%= link_to "Delete", actor_path(@actor), method: :delete %> </h3>
+</h3>
+
     <img src= <%= @actor.img_url %> >
+
+
    
   
