--- a/Historical-Moments/app/views/actors/index.html.erb
+++ b/Historical-Moments/app/views/actors/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Noteworthy Historical Actors </h1>
-<% @actors.each do |actor| %> <br>
+<h3><% @actors.each do |actor| %> <br>
     <%= link_to actor.name, actor_path(actor) %>
-<% end %> 
+<% end %>  </h3>
+
+<%= form_tag new_actor_path, method: :get do %>
+    <%= submit_tag "Create New Actor" %>
+   <% end %>
