--- a/Historical-Moments/app/views/locations/new.html.erb
+++ b/Historical-Moments/app/views/locations/new.html.erb
@@ -3,5 +3,6 @@
 <%= form_for @location do |f| %>
 <%= f.collection_select :actor_id, Actor.all, :id, :name %>
 <%= f.collection_select :event_id, Event.all, :id, :name %>
-<%= f.submit %>
+<%= f.submit "Connect Actor And Event" %>
 <% end %>
+
