--- a/Historical-Moments/app/views/actors/new.html.erb
+++ b/Historical-Moments/app/views/actors/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a New Actor</h1>
-<%= form_for(@actor) do |f| %> 
+<h3><%= form_for(@actor) do |f| %> 
 <%= f.label :name %>
 <%= f.text_field :name %> <br>
 <%= f.label :birth_date%>
@@ -13,5 +13,5 @@
 <%= f.label :title %>
 <%= f.text_field :title %> <br>
 <%= f.submit %>
-<% end %> 
+<% end %> </h3>
 
