--- a/Historical-Moments/app/views/actors/show.html.erb
+++ b/Historical-Moments/app/views/actors/show.html.erb
@@ -6,7 +6,7 @@ Title: <%= @actor.title %> <br>
 <% @actor.events.each do |event| %> 
     Participated In: <%= link_to event.name, event_path(event) %> <br>
     <% end %><br> 
-    <%= link_to "Edit", edit_actor_path(@actor)%> ||
+    <%= link_to "Edit", edit_actor_path(@actor)%> || <%= link_to "Add Event", new_location_path %> ||
 <%= link_to "Delete", actor_path(@actor), method: :delete %> </h3>
 </h3>
 
