--- a/Historical-Moments/app/views/events/show.html.erb
+++ b/Historical-Moments/app/views/events/show.html.erb
@@ -11,7 +11,7 @@
 </ul>
 
 <%= form_tag new_actor_path, method: :get do %>
-<%= submit_tag "Add Actor To Event" %>
+<%= submit_tag "Add Actor" %>
 <% end %>
 <br>
 
