--- a/Historical-Moments/app/views/layouts/application.html.erb
+++ b/Historical-Moments/app/views/layouts/application.html.erb
@@ -11,8 +11,14 @@
 
   <body>
 
-  <h3> <%= link_to "Hist. Moments", historical_moments_path %>  &nbsp <%= link_to "Hist. Events", events_path %>
-  &nbsp <%= link_to "Hist. Actors", actors_path %> &nbsp <%= link_to "Hist. Docs", documents_path %>
+  <% if current_user %>
+    <h3> You are logged in as:  <%= current_user.username %> </h3>
+    <%= link_to "Logout", sessions_path, method: :delete %>
+    <% else %>
+    <%= link_to "Login", new_session_path %>
+  <% end %>
+
+  <h3> <%= link_to "Hist. Moments", historical_moments_path %> 
   <%= link_to "Link Actors and Events", new_location_path %></h3>
     <%= yield %>
   </body>
