started authentication and have created sesssions

--- a/Historical-Moments/app/views/layouts/application.html.erb
+++ b/Historical-Moments/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
     <%= link_to "Login", new_session_path %>
   <% end %>
 
-  <h3> <%= link_to "Hist. Moments", historical_moments_path %> 
-  <%= link_to "Link Actors and Events", new_location_path %></h3>
+  <h3> | <%= link_to "Hist. Moments", historical_moments_path %> |
+  <%= link_to "Link Actors and Events", new_location_path %> | </h3> 
     <%= yield %>
   </body>
 </html>
