--- a/Historical-Moments/app/views/layouts/application.html.erb
+++ b/Historical-Moments/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
   <% end %>
 
   <h3> | <%= link_to "Hist. Moments", historical_moments_path %> |
-  <%= link_to "Link Actors and Events", new_location_path %> | </h3> 
+  <%= link_to "Link Actors and Events", new_location_path %> | 
+  <%= link_to "Learn More", analytics_path %>
+  </h3> 
     <%= yield %>
   </body>
 </html>
