--- a/Historical-Moments/app/views/analytics/show.html.erb
+++ b/Historical-Moments/app/views/analytics/show.html.erb
@@ -1,5 +1,6 @@
-<h1>Learn More About </h1>
-<h3>Actors:</h3>
+<h1>Learn More About: </h1>
+<h3> <%= @all_actors %> Actors: </h3>
 <% @actors.each do |actor| %>
    <li> <%= link_to actor.name, actor_path(actor) %> </li>
-    <% end %> 
+    <% end %> <br>
+    <p> The actor with the most events is <%= link_to @most_events.name, actor_path(@most_events) %>, who has <%= @most_events.events.count %> events. <p> 
