--- a/Historical-Moments/app/views/events/show.html.erb
+++ b/Historical-Moments/app/views/events/show.html.erb
@@ -14,13 +14,9 @@
 
 <img src= <%=@event.img_url %> alt="">
 <br><br>
-<%= form_tag edit_event_path, method: :get do %>
-<%= submit_tag "Update Event" %>
-<% end %>
-
-<%= form_tag event_path(@event), method: :delete do %>
- <%= submit_tag "Delete Event", data: { confirm: 'Are you sure?' } %>
-<% end %>
+<h3>
+<%= link_to "Edit", edit_event_path(@event)%> ||
+<%= link_to "Delete", event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }%> </h3>
 
 
 
