conditional statement added to actor show page

--- a/Historical-Moments/app/views/actors/index.html.erb
+++ b/Historical-Moments/app/views/actors/index.html.erb
@@ -3,6 +3,4 @@
     <%= link_to actor.name, actor_path(actor) %>
 <% end %>  </h3>
 
-<%= form_tag new_actor_path, method: :get do %>
-    <%= submit_tag "Create New Actor" %>
-   <% end %>
+<h3> || <%= link_to "Add Actor", new_actor_path %> || </h3>
