--- a/Historical-Moments/app/views/historical_moments/index.html.erb
+++ b/Historical-Moments/app/views/historical_moments/index.html.erb
@@ -8,6 +8,6 @@ End date: <%= moment.end_date %> <br>
 <% end %>
 <br>
 
-<%= link_to "Create Historical Event", new_historical_moment_path %>
+<%= link_to "Create Historical Moment", new_historical_moment_path %>
 
 </h3>
