--- a/Historical-Moments/app/views/historical_moments/edit.html.erb
+++ b/Historical-Moments/app/views/historical_moments/edit.html.erb
@@ -10,6 +10,9 @@
 <%= f.label :end_date %>
 <%= f.date_field :end_date %>
 
+<%= f.label :img_url %>
+<%= f.text_field :img_url %> <br><br>
+
 <%= f.submit %>
  
 <% end %>
