--- a/Historical-Moments/app/views/documents/show.html.erb
+++ b/Historical-Moments/app/views/documents/show.html.erb
@@ -3,6 +3,9 @@
 <h3><%= @document.creation_date %> <br>
 <%= @document.author %> <br>
 <%= @document.historical_moment.name %> <br>
-<%= link_to "Edit", edit_document_path(@document)%> ||
-<%= link_to "Delete", document_path(@document), method: :delete %> </h3>
+<%= link_to "Edit", edit_document_path(@document)%> || 
+<%= link_to "Delete", document_path(@document), method: :delete %> || 
+<%= link_to "All Documents", documents_path %> ||
+<%= link_to "Create New Document", new_document_path %>
+</h3>
 
