--- a/Historical-Moments/app/views/users/new.html.erb
+++ b/Historical-Moments/app/views/users/new.html.erb
@@ -1,6 +1,21 @@
 <style> body {background-color: #e01010; } </style>
 <h1>Create New User</h1>
 
+<% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@user.errors.count, "error") %>
+      prohibited this user from being saved:
+    </h2>
+ 
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for @user do |f| %>
 <%= f.label :username %>
 <%= f.text_field :username %>
