--- a/Historical-Moments/app/views/users/new.html.erb
+++ b/Historical-Moments/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<style> body {background-color: #e01010; } </style>
+
+<center>
 <h1>Create New User</h1>
 
 <% if @user.errors.any? %>
@@ -18,9 +19,12 @@
 
 <%= form_for @user do |f| %>
 <%= f.label :username %>
-<%= f.text_field :username %>
+<%= f.text_field :username %> <br>
 <%= f.label :password %>
-<%= f.password_field :password %>
+<%= f.password_field :password %> <br><br>
 <%= f.submit %>
 
 <% end %>
+
+</center>
+
